<resources>
    <string name="app_name">스낵픽</string>
    <string name="action_settings">로그아웃</string>
    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>

    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>

    <!--user_Info_String-->
    <string name="allergy_listBox_title_text">알레르기 pick</string>
    <string name="allergy_searchButton_text">사진으로 조회하기</string>
    <string name="allergy_searchButton_text1">바코드로 조회하기</string>

    <!--Facebook-->
    <string name="facebook_app_id">2043198459302948</string>
    <string name="fb_login_protocol_scheme">fb2043198459302948</string>

    <string name="component_kr">성분 :</string>

    <!--Loading Layout String-->
    <string name="layout_loadingInfo_text">찍고 알고 먹는 즐거움. 스낵픽</string>
    <string name="username_hint">username</string>
    <string name="allergy_add_button_description">Button for adding allergies</string>
    <string name="component">성분</string>
    <string name="component_input">성분 입력</string>
    <string name="add">추가</string>
    <string name="title_pick">pick</string>
    <string name="title_snack">SNACK</string>
    <string name="snack_image_description">snack_image</string>
    <string name="item_image_description">Item Image</string>

    <!--AddMob-->
    <string name="banner_add_unit_id">ca-app-pub-7512125801944770/2456463917</string>

</resources>