<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/component_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:text="@string/component_kr"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/component_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toEndOf="@+id/component_text"
            android:layout_toStartOf="@+id/add_btn"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:hint="@string/component_input"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_centerVertical="true"
            android:background="@color/colorPoint"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/add"
            android:textColor="@color/cardview_light_background"
            android:textOff=""
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>