<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE"
    android:theme="@style/AppTheme.NoActionBar">

    <!-- top toolbar -->
    <RelativeLayout
        android:id="@+id/relLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/snippet_toolbar" />

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        app:civ_border_color="@color/black"
        app:civ_border_width="0.5dp"
        app:layout_constraintBottom_toTopOf="@+id/my_allergy_listView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:textAlignment="center"
        android:textColor="@color/facebook_color"
        android:textColorHint="@color/facebook_color"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo" />


    <TextView
        android:id="@+id/allergy_Title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/allergy_listBox_title_text"
        android:textColor="@color/app_point_text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/my_allergy_listView"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <ImageButton
        android:id="@+id/allergy_add_button"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/add_vector"
        android:contentDescription="@string/allergy_add_button_description"
        app:layout_constraintBottom_toTopOf="@+id/my_allergy_listView"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/allergy_Title_textView" />

    <ListView
        android:id="@+id/my_allergy_listView"
        android:layout_width="268dp"
        android:layout_height="250dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/list_rounded"
        ads:layout_constraintBottom_toTopOf="@+id/adView1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657" />

    <ImageButton
        android:id="@+id/allergy_search_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded"
        android:scaleType="fitCenter"
        android:src="@drawable/photo_camera_addtext"
        ads:layout_constraintBottom_toTopOf="@+id/adView1"
        ads:layout_constraintVertical_bias="0.163"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/allergy_search_button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_allergy_listView" />

    <ImageButton
        android:id="@+id/allergy_search_button2"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded"
        android:scaleType="fitCenter"
        android:src="@drawable/bars_code_addtext"
        ads:layout_constraintBottom_toTopOf="@+id/adView1"
        ads:layout_constraintVertical_bias="0.163"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/allergy_search_button"
        app:layout_constraintTop_toBottomOf="@+id/my_allergy_listView" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_add_unit_id"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="511dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="85dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="85dp" />


</android.support.constraint.ConstraintLayout>